--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     </div>
     <img  width="1250px" src="image/movie.jpg" alt="">
     <h2>Movie is  entertiment for all persons</h2>
-    <img src="image/kavin g.jpeg" alt="">
+    <!-- <img src="image/kavin g.jpeg" alt=""> -->
 </body>
 </html>
